--- a/frontend/A N S/package.json
+++ b/frontend/A N S/package.json
@@ -20,6 +20,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.24.0",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
