done first version

--- a/frontend/A N S/package.json
+++ b/frontend/A N S/package.json
@@ -1,5 +1,6 @@
 {
   "name": "a-n-s",
+  "homepage": "http://ans-entreprise-generale-btp.com/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
